# uefi-bare-bones

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gdbinit  .gitignore  CHANGELOG  CMakeLists.txt  Config  Makefile  README.md  apply-template.sh  apply.sh  bootinfo.h  compile_commands.json  elf_tester.c  image-template.sh  initfs  limine.conf  run.sh  test.c  toolchain.cmake
aml/: Makefile  computational_data.c  exec.c  expression.c  name_string.c  named_obj.c  namespace.c  namespace_modifier.c  parser.c  statement.c
aml/include/: aml.h  host.h  parser.h
aml_driver/: driver  driver.c
kernel/: Makefile  acpi.c  alloc.c  config.c  cpio.c  crti.s  crtn.s  entry.s  gdt.c  idt.c  kernel.c  kernel.h  kernel_init.c  keyboard.c  liballoc.c  linker.lds  pages.c  pixel.c  qemu.c  segments.s  tty.c
kernel.old/: Makefile  kernel.c  pages.c  pixel.c
kernel.old/cpu/: Makefile  boot.s  gdt.c  idt.c  interrupts.c  isr.s
kernel.old/include/: acpi.h  cpio.h  cpu.h  kernel.h  memory.h  pages.h  qemu.h
kernel/acpi/: acpi.c  acpi.h  aml.h  dsdt.c  hpet.c  ioapic.c  ioapic.h  lapic.c  lapic.h  madt.c  madt.h  timer.c  uacpi.c
kernel/acpi/aml/: .name_string.c.swp  .parser.c.swp  aml.h  computational_data.c  expression.c  name_string.c  named_obj.c  namespace.c  namespace_modifier.c  parser.c  parser.h  statement.c
kernel/cpu/: cpuid.c  gdt.c  gdt.h  gdt.s  idt.c  idt.h  idt.s  isr.c  isr.s  pit.c  sleep.c  task.c  tasking.c  tasking.s  tsc.c
kernel/drivers/: config.c  keyboard.c  shell.c  trace.c
kernel/graphics/: pixel.c  tty.c
kernel/include/: acpi.h  config.h  cpio.h  debug.h  elf.h  gdt.h  graphics.h  idt.h  kernel.h  keyboard.h  liballoc.h  log.h  memory.h  page.h  qemu.h  scancodes.h  shell.h  trace.h  types.h
kernel/include/acpi/: acpi.h  ioapic.h  lapic.h  madt.h  pic.h  tables.h  timer.h
kernel/include/cpu/: gdt.h  idt.h  isr.h  macros.inc  pit.h  sleep.h  task.h  tasking.h  tsc.h
kernel/include/graphics/: pixel.h  tty.h
kernel/include/loaders/: lethe_loader.h  limine.h  loader.h
kernel/include/memory/: alloc.h  cpio.h  liballoc.h  pages.h  paging.h
kernel/include/terminal/: pixel.h  tty.h
kernel/makefiles/: acpi.mk  cpu.mk  drivers.mk  memory.mk  terminal.mk
kernel/memory/: alloc.c  alloc.h  buddy_allocator.c  buddy_allocator.h  cpio.c  initial_frame_allocator.c  initial_frame_allocator.h  liballoc.c  liballoc.h  list_allocator.c  list_allocator.h  pages.c  paging.c  paging_internal.h
kernel/scripts/: lethe_loader.lds  limine_loader.lds
kernel/terminal/: log.c  pixel.c  tty.c
lai/: Makefile
lai/core/: exec.c  ns.c
lethe-aml/: CMakeLists.txt
lethe-aml/aml/: CMakeLists.txt  computational_data.c  defs.c  exec.c  expression.c  helpers.c  interface.c  name.c  name_string.c  named_obj.c  namespace.c  namespace_modifier.c  parser.c  scratch.c  statement.c
lethe-aml/aml/include/: aml.h  defs.h  fnv.h  hashmap.h  helpers.h  host.h  name.h  namespace.h  opcodes.h  parser.h  types.h
lethe-aml/aml_driver/: CMakeLists.txt  driver.c
lethe-bootloaders/: CMakeLists.txt
lethe-bootloaders/loader/: bootinfo.c  bootx64.c  elf.c  elf.h  loader.h  page_table.c
lethe-kernel/: CMakeLists.txt  kernel.c  kernel_end.c  kernel_init.c
lethe-kernel/acpi/: CMakeLists.txt  acpi.c  acpi.h  ioapic.c  lapic.c  madt.c  tables.h  timer.c
lethe-kernel/cpu/: CMakeLists.txt  idt.c  isr.asm  isr.c  pit.c  sleep.c  task.c  tsc.c
lethe-kernel/drivers/: CMakeLists.txt  config.c  cpuid.h  keyboard.c  shell.c  trace.c  utils.c
lethe-kernel/include/: config.h  elf.h  keyboard.h  log.h  scancodes.h  shell.h  trace.h  types.h  utils.h
lethe-kernel/include/acpi/: acpi.h  pic.h
lethe-kernel/include/cpu/: gdt.h  idt.h  isr.h  pit.h  sleep.h  task.h  tsc.h
lethe-kernel/include/loaders/: lethe_loader.h  limine.h
lethe-kernel/include/memory/: alloc.h  cpio.h  paging.h
lethe-kernel/include/terminal/: tty.h
lethe-kernel/memory/: CMakeLists.txt  alloc.c  buddy_allocator.c  buddy_allocator.h  cpio.c  initial_frame_allocator.c  initial_frame_allocator.h  liballoc.c  liballoc.h  list_allocator.c  list_allocator.h  paging.c  paging_internal.h
lethe-kernel/terminal/: CMakeLists.txt  log.c  pixel.c  tty.c
lethe-libc/: CMakeLists.txt  assert.c  stdio.c  stdlib.c  string.c
lethe-libc/include/: assert.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
lethe-libc/include/sys/: cdefs.h
lethe-misc/: lethe-configurator
libc/: Makefile  stdio.c  stdlib.c  string.c
libc/include/: stdio.h  stdlib.h  string.h
libc/include/sys/: cdefs.h
libc/stdlib/: abort.c
loader/: Makefile  bootinfo.c  bootx64.c  clib.c  config.c  config.txt  elf.c  elf.h  io.c  io.h  loader.c  loader.h  log.c  main.c  page_table.c
loader/efi/: boot_table.h  device_path_protocol.h  efi.h  file_protocol.h  graphics_output_protocol.h  loaded_image_protocol.h  simple_file_system_protocol.h  simple_text_output_protocol.h  system_table.h  types.h
loader/uefi/: Makefile  uefi.h
templates/: CMakeLists.txt  apply-template  gdbinit-template  image-template  qemu-debugcon-template  qemu-gdb-template  qemu-monitor-template
test/: Makefile  lib.c  loader.c  test.c  test.h
uacpi/: Makefile
uacpi/include/uacpi/: acpi.h  event.h  io.h  kernel_api.h  sleep.h  tables.h  uacpi.h
uacpi/source/: default_handlers.c  event.c  interpreter.c  sleep.c  tables.c  uacpi.c
