FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/null.c "")
ADD_EXECUTABLE(kernel null.c)
ADD_LIBRARY(kernel_lib)
TARGET_SOURCES(kernel_lib PRIVATE entry.asm.o kernel.c font.o)

SET(LETHE_KERNEL_FILE ${CMAKE_CURRENT_BINARY_DIR}/kernel PARENT_SCOPE)
INCLUDE_DIRECTORIES(include)
IF (DEFINED FEATURE_QEMU)
    ADD_COMPILE_DEFINITIONS(QEMU_DEBUG)
ENDIF ()
IF (DEFINED FEATURE_LIMINE)
    ADD_COMPILE_DEFINITIONS(KERNEL_USE_LIMINE)
    TARGET_LINK_OPTIONS(kernel PUBLIC -T ${CMAKE_CURRENT_SOURCE_DIR}/scripts/limine_loader.lds)
ELSE ()
    TARGET_LINK_OPTIONS(kernel PUBLIC -T ${CMAKE_CURRENT_SOURCE_DIR}/scripts/lethe_loader.lds)
ENDIF ()
ADD_COMPILE_DEFINITIONS($<$<CONFIG:DEBUG>:KERNEL_DEBUG>)
ADD_LIBRARY(kernel_init)
TARGET_SOURCES(kernel_init PRIVATE kernel_init.c)
ADD_LIBRARY(kernel_end)
TARGET_SOURCES(kernel_end PRIVATE kernel_end.c)
ADD_SUBDIRECTORY(acpi)
ADD_SUBDIRECTORY(cpu)
ADD_SUBDIRECTORY(drivers)
ADD_SUBDIRECTORY(memory)
ADD_SUBDIRECTORY(terminal)
ADD_DEPENDENCIES(kernel kernel_init)
ADD_DEPENDENCIES(kernel kernel_lib)
ADD_DEPENDENCIES(kernel acpi)
ADD_DEPENDENCIES(kernel cpu)
ADD_DEPENDENCIES(kernel drivers)
ADD_DEPENDENCIES(kernel memory)
ADD_DEPENDENCIES(kernel terminal)
ADD_DEPENDENCIES(kernel aml)
ADD_DEPENDENCIES(kernel libk)
ADD_DEPENDENCIES(kernel kernel_end)
TARGET_LINK_LIBRARIES(kernel kernel_init libk aml kernel_lib acpi cpu drivers memory terminal kernel_end)
#TARGET_SOURCES(kernel PRIVATE kernel_end.c)
FIND_PROGRAM(CAT cat REQUIRED)
FIND_PROGRAM(GUNZIP gunzip REQUIRED)
FIND_PROGRAM(OBJCOPY objcopy REQUIRED)
find_program(NASM nasm REQUIRED)
SET(KERNEL_FONT /usr/share/consolefonts/default8x16.psfu.gz)
ADD_CUSTOM_COMMAND(OUTPUT font.psf COMMAND ${CAT} ${KERNEL_FONT} | ${GUNZIP} -c > font.psf WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
ADD_CUSTOM_COMMAND(OUTPUT font.o COMMAND ${OBJCOPY} -O elf64-x86-64 -B i386 -I binary font.psf ${CMAKE_CURRENT_BINARY_DIR}/font.o WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_custom_command(OUTPUT entry.asm.o COMMAND ${NASM} -felf64 -i include entry.asm -o ${CMAKE_CURRENT_BINARY_DIR}/entry.asm.o WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
